@@ -2,7 +2,7 @@ package cloudExplorer;
 
 public class S3 {
     /*
-     * Cloud Explorer Copyright (C) December 20, 2013 By Phillip Tribble. This program
+     * Cloud Explorer Copyright (C) January 1, 2015 By Phillip Tribble. This program
      * is free software; you can redistribute it and/or modify it under the terms of
      * the GNU General Public License as published by the Free Software Foundation;
      * either version 3 of the License, or (at your option) any later version. This
