@@ -10,6 +10,7 @@ GUI Text box size fixes when creating a bucket, running performance tests, migra
 GUI - When files are deleted, the file listing in object explorer is refreshed.
 GUI - Select and Deselect are one toggle button. Issue #18.
 GUI - Bucket properties are always visible. Issue #16.
+GUI - Bucket properties takes action upon selecting the button. Issue #15.
 
 New Features:
 
